# gitlab-clone-all

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: git.rs  gitlab.rs  lib.rs  main.rs  project.rs
