[package]
name = "gitlab-clone-all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version = "0.13.25", features= ["vendored-libgit2"]}
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0"}
anyhow = "1.0.13"
log = "0.4.14"
env_logger = {version="0.9.0", features=["termcolor", "atty", "humantime"]}
console = "0.15.0"
bytesize = {version = "1.1.0", features = ["serde"]}
dirs = "4.0.0"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
# Cherry-pick the features you'd like to use
features = ["std", "suggestions", "color", "derive"]

[dev-dependencies]
warp = {version = "0.3", features = []}
